[package]
name = "hyper-0-14-http2-unexpected-eof-problem"
version = "0.1.0"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["stream", "server", "http1", "h2"] }
futures = "0.3"
http = "0.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
rustls = "0.19"
hyper-rustls = "0.22"
futures-util = "0.3"
tokio-rustls = "0.22"
async-stream = "0.3.0"
