[package]
name = "simple-hyper-https-server"
version = "0.1.0-SNAPSHOT"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
http = "0.2"
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "net"] }
rustls = "0.20"
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
log = "0.4"
env_logger = "0.9"
pin-project-lite = "0.2"
anyhow = "1.0"

